demo-app/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: menu-frontend
  name: menu-frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: menu-frontend
  type: ClusterIP
